--- a/sam/template.yaml
+++ b/sam/template.yaml
@@ -1,18 +1,13 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: 'A Serverless App that receives HackerOne's Webhook payload, reformats it to ASFF, and forwards it to AWS Security Hub'
 Outputs:
-  SecurityHubForwarderApiUrl:
-    Description: URL of your API endpoint
+  SecurityHubWebhookReceiverApiUrl:
+    Description: URL of your API endpoint to use as a HackerOne Webhook target
     Value:
-      Fn::Sub: https://${SecurityHubForwarderApiGateway}.execute-api.${AWS::Region}.amazonaws.com/prod/aws-hackerone-findings
-  SecurityHubForwarderFunction:
-    Description: SecurityHubForwarder Function ARN
-    Value:
-      Fn::GetAtt:
-      - SecurityHubForwarderFunction
-      - Arn
+      Fn::Sub: https://${SecurityHubWebhookReceiverApiGateway}.execute-api.${AWS::Region}.amazonaws.com/prod/aws-hackerone-findings
+
 Resources:
-  SecurityHubForwarderApiGateway:
+  SecurityHubWebhookReceiverApiGateway:
     Properties:
       DefinitionBody:
         info:
@@ -37,7 +32,7 @@ Resources:
                   integration.request.header.X-Amz-Invocation-Type: '''RequestResponse'''
                 type: aws_proxy
                 uri:
-                  Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${SecurityHubForwarderFunction.Arn}/invocations
+                  Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${SecurityHubWebhookReceiverFunction.Arn}/invocations
         securityDefinitions:
           sigv4:
             in: header
@@ -48,20 +43,18 @@ Resources:
       EndpointConfiguration: EDGE
       StageName: prod
     Type: AWS::Serverless::Api
-  SecurityHubForwarderFunction:
+  SecurityHubWebhookReceiverFunction:
     Properties:
-      CodeUri: TBD
+      CodeUri: ../src/
       Events:
         Api1:
           Properties:
             Method: POST
             Path: /findings
             RestApiId:
-              Ref: SecurityHubForwarderApiGateway
+              Ref: SecurityHubWebhookReceiverApiGateway
           Type: Api
-      Handler: securityhub_forwarder.lambda_handler
-      Layers:
-      - Fn::Sub: TBD
+      Handler: lambda_function.lambda_handler
       MemorySize: 128
       Policies:
       - Statement:
