simplify to APIG

--- a/sam/template.yaml
+++ b/sam/template.yaml
@@ -10,117 +10,121 @@ Resources:
   SecurityHubWebhookReceiverApiGateway:
     Properties:
       DefinitionBody:
+        openapi: "3.0.1"
         info:
-          description: API endpoint for invoking SecurityHubForwarderFunction
-          title:
-            Ref: AWS::StackName
-          version: 1.0.0
+          title: "HackerOne-to-Security-Hub"
+          description: "A Serverless App that receives the HackerOne Webhook payload, \
+            \ reformats it to ASFF, and forwards it to AWS Security Hub"
+          version: "2021-09-02T11:00:10Z"
+        servers:
+        - url: "https://cst2zcm84g.execute-api.us-east-1.amazonaws.com/{basePath}"
+          variables:
+            basePath:
+              default: "/prod"
         paths:
           /aws-hackerone-findings:
             post:
-              consumes:
-              - application/json
-              produces:
-              - application/json
-              responses: {}
-              security:
-              - sigv4: []
+              responses:
+                "200":
+                  description: "200 response"
+                  content:
+                    application/json:
+                      schema:
+                        $ref: "#/components/schemas/Empty"
               x-amazon-apigateway-integration:
-                httpMethod: POST
-                passthroughBehavior: when_no_match
-                requestParameters:
-                  integration.request.header.X-Amz-Invocation-Type: '''RequestResponse'''
-                type: aws_proxy
-                uri:
-                  Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${SecurityHubWebhookReceiverFunction.Arn}/invocations
-        securityDefinitions:
-          sigv4:
-            in: header
-            name: Authorization
-            type: apiKey
-            x-amazon-apigateway-authtype: awsSigv4
-        swagger: '2.0'
+                type: "aws"
+                httpMethod: "POST"
+                uri: "arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:021740258839:function:hackerone-receiver/invocations"
+                responses:
+                  default:
+                    statusCode: "200"
+                passthroughBehavior: "when_no_match"
+                contentHandling: "CONVERT_TO_TEXT"
+        components:
+          schemas:
+            Empty:
+              type: "object"
       EndpointConfiguration: EDGE
       StageName: prod
     Type: AWS::Serverless::Api
-  SecurityHubWebhookReceiverFunction:
-    Properties:
-      Code:
-        ZipFile: |
-          import boto3
-          import json
-          import uuid
-          import datetime
-          import logging
+#   SecurityHubWebhookReceiverFunction:
+#     Properties:
+#       Code:
+#         ZipFile: |
+#           import boto3
+#           import json
+#           import uuid
+#           import datetime
+#           import logging
 
-          securityhub = boto3.client('securityhub')
+#           securityhub = boto3.client('securityhub')
 
-          def get_product_arn(securityhub_region):
-              return "arn:aws:securityhub:%s::product/hackerone/vulnerability-intelligence" % (securityhub_region)
+#           def get_product_arn(securityhub_region):
+#               return "arn:aws:securityhub:%s::product/hackerone/vulnerability-intelligence" % (securityhub_region)
 
-          def get_lambda_account_id(context):
-              lambda_account_id = context.invoked_function_arn.split(":")[4]
-              return lambda_account_id
+#           def get_lambda_account_id(context):
+#               lambda_account_id = context.invoked_function_arn.split(":")[4]
+#               return lambda_account_id
 
-          def lambda_handler(event, context):
-              lambda_account_id = get_lambda_account_id(context)
-              lambda_region = os.getenv("AWS_REGION")
-              logger.info("Invoking lambda_handler in Region %s AccountId %s" % (lambda_region, lambda_account_id))
-              finding_account_id = os.getenv("AWS_ACCOUNT_ID", lambda_account_id)
-              securityhub_region = os.getenv("REGION", lambda_region)
-              product_arn = get_product_arn(securityhub_region)
+#           def lambda_handler(event, context):
+#               lambda_account_id = get_lambda_account_id(context)
+#               lambda_region = os.getenv("AWS_REGION")
+#               logger.info("Invoking lambda_handler in Region %s AccountId %s" % (lambda_region, lambda_account_id))
+#               finding_account_id = os.getenv("AWS_ACCOUNT_ID", lambda_account_id)
+#               securityhub_region = os.getenv("REGION", lambda_region)
+#               product_arn = get_product_arn(securityhub_region)
 
-              all_findings = []
-              uid = event['data']['activity']['id']
-              fid = str(securityhub_region) + "/" + str(finding_account_id) + "/" + str(uid)
-              time = datetime.datetime.utcnow().isoformat("T") + "Z"
-              data = event['data']
-              reportAttributes = event['data']['report']['attributes']
-              severityRating = event['data']['report']['relationships']['severity']['data']['attributes']['rating'].upper()
-              # severityScore = str(event['data']['report']['relationships']['severity']['data']['attributes']['score'])
+#               all_findings = []
+#               uid = event['data']['activity']['id']
+#               fid = str(securityhub_region) + "/" + str(finding_account_id) + "/" + str(uid)
+#               time = datetime.datetime.utcnow().isoformat("T") + "Z"
+#               data = event['data']
+#               reportAttributes = event['data']['report']['attributes']
+#               severityRating = event['data']['report']['relationships']['severity']['data']['attributes']['rating'].upper()
+#               # severityScore = str(event['data']['report']['relationships']['severity']['data']['attributes']['score'])
 
-              finding = {
-                  "SchemaVersion": "2018-10-08",
-                  "RecordState": "ACTIVE",
-                  "ProductArn": product_arn,
-                  "ProductFields": {
-                      "ProviderName": "HackerOne"  
-                  },
-                  "Description": reportAttributes['title'],
-                  "GeneratorId": "acme-vuln-9ab348",
-                  "AwsAccountId": str(finding_account_id),
-                  "Id": fid,
-                  "Types": [
-                      "Software and Configuration Checks/Vulnerabilities/CVE"
-                  ],
-                  "CreatedAt": time,
-                  "UpdatedAt": time,
-                  "FirstObservedAt": time,
-                  "Resources": [{
-                      "Type": "AwsAccount",
-                      "Id": "AWS::::Account:" + str(finding_account_id)
-                  }],
-                  "Severity": {
-                      "Label": severityRating,
-                      "Original": "5"
-                  },
-                  "Title": reportAttributes['title']
-              }
+#               finding = {
+#                   "SchemaVersion": "2018-10-08",
+#                   "RecordState": "ACTIVE",
+#                   "ProductArn": product_arn,
+#                   "ProductFields": {
+#                       "ProviderName": "HackerOne"  
+#                   },
+#                   "Description": reportAttributes['title'],
+#                   "GeneratorId": "acme-vuln-9ab348",
+#                   "AwsAccountId": str(finding_account_id),
+#                   "Id": fid,
+#                   "Types": [
+#                       "Software and Configuration Checks/Vulnerabilities/CVE"
+#                   ],
+#                   "CreatedAt": time,
+#                   "UpdatedAt": time,
+#                   "FirstObservedAt": time,
+#                   "Resources": [{
+#                       "Type": "AwsAccount",
+#                       "Id": "AWS::::Account:" + str(finding_account_id)
+#                   }],
+#                   "Severity": {
+#                       "Label": severityRating,
+#                       "Original": "5"
+#                   },
+#                   "Title": reportAttributes['title']
+#               }
 
-              all_findings.append(finding)
+#               all_findings.append(finding)
 
-              securityhub_cli = boto3.client('securityhub', region_name="us-east-1")
+#               securityhub_cli = boto3.client('securityhub', region_name="us-east-1")
 
-              securityhub_cli.batch_import_findings(
-                  Findings=all_findings
-              )
+#               securityhub_cli.batch_import_findings(
+#                   Findings=all_findings
+#               )
 
-          def get_logger():
-              logger = logging.getLogger()
-              logger.setLevel(logging.INFO)
-              return logger
+#           def get_logger():
+#               logger = logging.getLogger()
+#               logger.setLevel(logging.INFO)
+#               return logger
 
-          logger = get_logger()
+#           logger = get_logger()
 #       Events:
 #         Api1:
 #           Properties:
@@ -129,16 +133,16 @@ Resources:
 #             RestApiId:
 #               Ref: SecurityHubWebhookReceiverApiGateway
 #           Type: Api
-      Handler: index.lambda_handler
-      MemorySize: 128
-      Policies:
-      - Statement:
-        - Action:
-          - securityhub:BatchImportFindings
-          Effect: Allow
-          Resource: arn:aws:securityhub:*:*:*
-          Sid: SecurityHubImportFindingsPolicy
-      Runtime: python3.7
-      Timeout: 300
-    Type: AWS::Lambda::Function
-Transform: AWS::Serverless-2016-10-31
+#       Handler: index.lambda_handler
+#       MemorySize: 128
+#       Policies:
+#       - Statement:
+#         - Action:
+#           - securityhub:BatchImportFindings
+#           Effect: Allow
+#           Resource: arn:aws:securityhub:*:*:*
+#           Sid: SecurityHubImportFindingsPolicy
+#       Runtime: python3.7
+#       Timeout: 300
+#     Type: AWS::Lambda::Function
+# Transform: AWS::Serverless-2016-10-31
