--- a/sam/template.yaml
+++ b/sam/template.yaml
@@ -44,8 +44,13 @@ Resources:
           schemas:
             Empty:
               type: "object"
-#       EndpointConfiguration: EDGE
     Type: AWS::ApiGateway::RestApi
+  SecurityHubWebhookReceiverApiDeployment:
+    Type: Type: AWS::ApiGateway::Deployment
+    Properties: 
+      RestApiId: !Ref SecurityHubWebhookReceiverApiGateway
+      StageName: prod
+
 #   SecurityHubWebhookReceiverFunction:
 #     Properties:
 #       Code:
