change type from Lambda to serverless function

--- a/sam/template.yaml
+++ b/sam/template.yaml
@@ -121,7 +121,7 @@ Resources:
         : "${SecurityHubWebhookReceiverRole.Arn}"
       Runtime: python3.7
       Timeout: 300
-    Type: "AWS::Lambda::Function"
+    Type: "AWS::Serverless::Function"
     DependsOn: SecurityHubWebhookReceiverRole
   SecurityHubWebhookReceiverRole: 
     Properties: 
